# 2D_Game_Engine

./: .clang-format  .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  README.md  build-linux.sh  build-windows.sh  build.sh  build_linux.sh  docker-compose.yml  format.sh  format_and_analysis.sh  main.cpp  test_entities.json
.claude/: settings.local.json
.github/: CODEOWNERS
.github/workflows/: auto-version.yml  build-linux.yml  build-windows.yml  build.yml  ci.yml  generate-release.yml  release.yml
Example/: CMakeLists.txt  README.md  build.sh  build_example.sh  update_example_game_windows.sh
Example/assets/shaders/: water.frag  water.vert
Example/saved_games/: main_scene.json  main_scene_backup.json
Example/src/: AudioManager.cpp  AudioManager.h  BarrelEntity.cpp  BarrelEntity.h  BarrelSpawner.cpp  BarrelSpawner.h  BoatEntity.cpp  BoatEntity.h  InputHelpers.cpp  InputHelpers.h  main.cpp
build_tools/: build.sh  build_linux.sh  build_windows.sh  check_function_coverage.sh  format_and_analysis.sh
cmake/: GameEngineConfig.cmake.in  toolchain-mingw64.cmake
components/: CGravity.h  CName.h  CTransform.h  Component.h
docs/: ParticleSystem.md  physics_optimization_plan.md
example_project/: CMakeLists.txt  build_example.sh
example_project/src/: main.cpp
include/: ComponentFactory.h  Entity.h  EntityManager.h  EventManager.h  Game.h  GameEngine.h  Registry.h  SceneManager.h  Vec2.h  World.h
include/Input/: ActionBinding.h  IInputListener.h  InputEvents.h  KeyCode.h  MouseButton.h
include/components/: CAudioListener.h  CAudioSource.h  CBoxCollider.h  CCircleCollider.h  CCollider.h  CCollider2D.h  CForceDebug.h  CGravity.h  CInputController.h  CMaterial.h  CName.h  CNativeScript.h  CParticleEmitter.h  CPhysicsBody2D.h  CRenderable.h  CRigidBody2D.h  CShader.h  CTexture.h  CTransform.h  Component.h  ComponentFactory.h  Components.h
include/entities/: Entity.h  EntityFactory.h  EntityManager.h
include/physics/: Box2DContactListener.h  CollisionDetector.h  Quadtree.h
include/systems/: AudioTypes.h  IAudioSystem.h  ISystem.h  S2DPhysics.h  SAudio.h  SAudioSystem.h  SBox2DPhysics.h  SComponentManager.h  SEntity.h  SInput.h  SInputManager.h  SParticle.h  SParticleSystem.h  SRenderer.h  SScene.h  SScript.h  SSerialization.h  System.h  SystemLocator.h
include/systems/serialization/: JsonBuilder.h  JsonParser.h
include/utility/: Color.h  FileUtilities.h  Guid.h  JsonBuilder.h  JsonParser.h  JsonValue.h  Logger.h  Vec2.h  Vec2i.h
package/include/: CGravity.h  CName.h  CTransform.h  ComponentFactory.h  Entity.h  GameEngine.h  System.h
src/: AABB.cpp  Box2DContactListener.cpp  CBoxCollider.cpp  CCircleCollider.cpp  CCollider.cpp  CCollider2D.cpp  CGravity.cpp  CName.cpp  CPhysicsBody2D.cpp  CRigidBody2D.cpp  CTransform.cpp  CollisionDetector.cpp  Component.cpp  ComponentFactory.cpp  Entity.cpp  EntityManager.cpp  EventManager.cpp  FileUtilities.cpp  Game.cpp  GameEngine.cpp  JsonBuilder.cpp  JsonParser.cpp  JsonValue.cpp  Logger.cpp  Quadtree.cpp  S2DPhysics.cpp  SBox2DPhysics.cpp  System.cpp  Vec2.cpp  main.cpp
src/components/: CAudioListener.cpp  CAudioSource.cpp  CCollider2D.cpp  CInputController.cpp  CMaterial.cpp  CName.cpp  CParticleEmitter.cpp  CPhysicsBody2D.cpp  CRenderable.cpp  CShader.cpp  CTexture.cpp  CTransform.cpp  Component.cpp  ComponentFactory.cpp
src/entities/: Entity.cpp  EntityManager.cpp
src/physics/: Box2DContactListener.cpp
src/systems/: S2DPhysics.cpp  SAudio.cpp  SAudioSystem.cpp  SBox2DPhysics.cpp  SComponentManager.cpp  SEntity.cpp  SInput.cpp  SInputManager.cpp  SParticle.cpp  SParticleSystem.cpp  SRenderer.cpp  SScene.cpp  SScript.cpp  SSerialization.cpp  System.cpp  SystemLocator.cpp
src/systems/serialization/: JsonBuilder.cpp  JsonParser.cpp
src/utility/: Color.cpp  FileUtilities.cpp  Guid.cpp  JsonParser.cpp  JsonValue.cpp  SceneManager.cpp  Vec2.cpp
systems/: System.h
tests/: 2DPhysicsSystemTest.cpp  2dPhysicsSystemTest.cpp  AABBTest.cpp  Box2DIntegrationTest.cpp  BoxColliderTest.cpp  CAudioListenerTest.cpp  CAudioSourceTest.cpp  CCollider2DPolygonTest.cpp  CCollider2DSegmentTest.cpp  CInputControllerTest.cpp  CMakeLists.txt  CMaterialTest.cpp  CNameTest.cpp  CParticleEmitterTest.cpp  CPhysicsBody2DTest.cpp  CRenderableTest.cpp  CShaderTest.cpp  CTextureTest.cpp  CTransformTest.cpp  CircleColliderTest.cpp  CollisionDetectorTest.cpp  ColorTest.cpp  ComponentFactoryTest.cpp  ComponentTest.cpp  EntityManagerTest.cpp  EntityTest.cpp  FileUtilitiesTest.cpp  HierarchyTest.cpp  JsonTest.cpp  LoggerTest.cpp  MainTest.cpp  QuadtreeTest.cpp  RegistryTest.cpp  RigidBody2DTest.cpp  S2DPhysicsTest.cpp  SAudioSystemTest.cpp  SComponentManagerTest.cpp  SInputManagerTest.cpp  SParticleSystemTest.cpp  SceneManagerTest.cpp  (+21 more)
tests/test_data/: builder_output.json  entity.json  level.json  test_scene.json
